--- a/app/src/main/res/layout/student_catalog.xml
+++ b/app/src/main/res/layout/student_catalog.xml
@@ -29,21 +29,40 @@
             android:paddingLeft="20dp"
             android:paddingRight="20dp"/>
 
-        <ScrollView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_weight="1">
 
-            <LinearLayout
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/loadmore"
+                android:background="@drawable/round_button"
+                android:layout_marginRight="10dp"
+                android:drawableTop="@drawable/down_arrow"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:minHeight="43dp"
+                android:elevation="1dp"
+                android:layout_centerHorizontal="false"
+                android:paddingTop="6dp"
+                android:visibility="visible"
+                android:layout_marginBottom="10dp"
+                android:gravity="center_horizontal" />
+
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:weightSum="1"
-                android:layout_weight="1">
+                android:layout_height="match_parent"
+                android:fillViewport="true">
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:weightSum="1"
+                    android:layout_weight="1">
 
                     <TextView
                         android:id="@+id/nodata"
@@ -66,26 +85,11 @@
 
                     </android.support.v7.widget.RecyclerView>
 
-                    <Button
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:id="@+id/loadmore"
-                        android:background="@drawable/round_button"
-                        android:layout_marginRight="20dp"
-                        android:drawableTop="@drawable/down_arrow"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"
-                        android:minHeight="43dp"
-                        android:elevation="1dp"
-                        android:layout_centerHorizontal="true"
-                        android:paddingTop="6dp"
-                        android:layout_marginBottom="20dp" />
+                </LinearLayout>
+            </ScrollView>
 
-                </RelativeLayout>
+        </RelativeLayout>
 
-            </LinearLayout>
-        </ScrollView>
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
