--- a/app/src/main/res/layout-v21/daily_fill_catalog.xml
+++ b/app/src/main/res/layout-v21/daily_fill_catalog.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,75 +8,87 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <include
+            android:id="@+id/tool_bar"
+            layout="@layout/tool_bar"
+            android:layout_height="match_parent"></include>
 
-            <include
-                android:id="@+id/tool_bar"
-                layout="@layout/tool_bar"></include>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/daily_teaches"
-                android:textSize="18sp"
-                android:textColor="@color/colorWhite"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:background="@color/colorAccent"
-                android:textAllCaps="true"
-                android:fontFamily="sans-serif" />
-
-        </LinearLayout>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" >
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/my_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-                <TextView
-                    android:id="@+id/noData"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:text="@string/no_data"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    android:visibility="gone"
-                    android:textStyle="normal|bold"
-                    android:textAllCaps="true"
-                    android:textAlignment="center" />
-            </LinearLayout>
-        </ScrollView>
-
-        <Button
-            android:id="@+id/loadmore"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="@string/daily_teaches"
+            android:textSize="18sp"
+            android:textColor="@color/colorWhite"
             android:layout_gravity="center"
-            android:background="@drawable/button_shape"
             android:gravity="center"
-            android:text="Load More"
-            android:visibility="gone"
-            android:textColor="@color/textcolor"
-            tools:ignore="HardcodedText" />
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:background="@color/colorAccent"
+            android:textAllCaps="true"
+            android:fontFamily="sans-serif" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/loadmore"
+                android:background="@drawable/round_button"
+                android:layout_marginRight="10dp"
+                android:drawableTop="@drawable/down_arrow"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:minHeight="43dp"
+                android:elevation="1dp"
+                android:layout_centerHorizontal="false"
+                android:paddingTop="6dp"
+                android:visibility="visible"
+                android:layout_marginBottom="10dp"
+                android:gravity="center_horizontal" />
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:weightSum="1"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/nodata"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="@string/no_data"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp"
+                        android:visibility="gone"
+                        android:textStyle="normal|bold"
+                        android:textAllCaps="true"
+                        android:textAlignment="center" />
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/my_recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    </android.support.v7.widget.RecyclerView>
+
+                </LinearLayout>
+            </ScrollView>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
@@ -86,26 +97,8 @@
         android:layout_width="320dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:background="#ffffff"
-        android:scrollbars="vertical"
-        tools:ignore="RtlHardcoded">
+        android:background="@color/colorWhite"
+        android:scrollbars="vertical">
 
     </android.support.v7.widget.RecyclerView>
 </android.support.v4.widget.DrawerLayout>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
