--- a/app/src/main/res/layout/student_catalog.xml
+++ b/app/src/main/res/layout/student_catalog.xml
@@ -52,17 +52,15 @@
                 android:layout_marginBottom="10dp"
                 android:gravity="center_horizontal" />
 
-            <ScrollView
+            <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fillViewport="true">
+                android:id="@+id/scrollView">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:weightSum="1"
-                    android:layout_weight="1">
+                    android:orientation="vertical" >
 
                     <TextView
                         android:id="@+id/nodata"
@@ -86,7 +84,7 @@
                     </android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
-            </ScrollView>
+            </android.support.v4.widget.NestedScrollView>
 
         </RelativeLayout>
 
