show message if data not available

--- a/app/src/main/res/layout-land/activity_pin_layout.xml
+++ b/app/src/main/res/layout-land/activity_pin_layout.xml
@@ -1,76 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+
+    <include
+        android:id="@+id/tool_bar"
+        layout="@layout/tool_bar">
+    </include>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_marginBottom="20dp">
 
-
-        <include
-            android:id="@+id/tool_bar"
-            layout="@layout/tool_bar">
-        </include>
-
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/generate_mpin"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textColor="?attr/colorAccent"
-            android:textSize="30sp"
-            android:textStyle="normal|bold"
-            android:layout_marginBottom="5dp"
-            android:paddingBottom="10dp"></TextView>
+            android:orientation="vertical" >
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/userpin"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/enter_pin"
-                android:textColor="@color/textcolor"
-                android:inputType="numberPassword"
-                android:textStyle="bold"
+                android:text="@string/generate_mpin"
+                android:textSize="18sp"
+                android:textColor="@color/colorWhite"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@color/colorAccent"
+                android:textAllCaps="true"
+                android:fontFamily="sans-serif" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp">
+
+                <EditText
+                    android:id="@+id/userpin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/enter_pin"
+                    android:textColor="@color/textcolor"
+                    android:inputType="numberPassword"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/inputconfirm"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="20dp">
+
+                <EditText
+                    android:id="@+id/confirmuserpin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/confirm_pin"
+                    android:textColor="@color/textcolor"
+                    android:inputType="numberPassword"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp" />
+            </android.support.design.widget.TextInputLayout>
+
+            <Button
+                android:id="@+id/loginuser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:textColor="@color/colorWhite"
+                android:layout_gravity="center"
+                android:background="@color/colorAccent"
+                android:clickable="true"
+                android:text="@string/generate_mpin"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginBottom="10dp" />
-        </android.support.design.widget.TextInputLayout>
+                android:textStyle="normal|bold"
+                android:textSize="18sp"
+                android:layout_marginBottom="20dp" />
+        </LinearLayout>
+    </ScrollView>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/inputconfirm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/confirmuserpin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/confirm_pin"
-                android:textColor="@color/textcolor"
-                android:inputType="numberPassword"
-                android:textStyle="bold"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp" />
-        </android.support.design.widget.TextInputLayout>
-
-        <Button
-            android:id="@+id/loginuser"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:textColor="@color/colorWhite"
-            android:layout_gravity="center"
-            android:background="@color/colorAccent"
-            android:clickable="true"
-            android:text="@string/generate_mpin"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:textStyle="normal|bold"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+</LinearLayout>
 
