--- a/app/src/main/res/layout/daily_fill_catalog.xml
+++ b/app/src/main/res/layout/daily_fill_catalog.xml
@@ -77,7 +77,8 @@
                         android:visibility="gone"
                         android:textStyle="normal|bold"
                         android:textAllCaps="true"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_marginTop="40dp" />
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/my_recycler_view"
