--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -1,71 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/DrawerLayout"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:elevation="7dp">
 
-
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar"
-        android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:textStyle="normal|bold"
-        android:textSize="18sp"
-        android:textAlignment="center"
-        android:text="@string/no_data"
-        android:layout_width="match_parent">
-    </include>
+        android:layout_height="match_parent"></include>
 
-    <ScrollView
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Time Table"
+        android:textSize="18sp"
+        android:textColor="@color/colorWhite"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="@color/colorAccent"
+        android:textAllCaps="true"
+        android:fontFamily="sans-serif" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_weight="1">
 
-        <LinearLayout
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/loadmore"
+            android:background="@drawable/round_button"
+            android:layout_marginRight="10dp"
+            android:drawableTop="@drawable/down_arrow"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:minHeight="43dp"
+            android:elevation="1dp"
+            android:layout_centerHorizontal="false"
+            android:paddingTop="6dp"
+            android:visibility="visible"
+            android:layout_marginBottom="10dp"
+            android:gravity="center_horizontal" />
+
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:id="@+id/scrollView">
 
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:spinnerMode="dialog" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/my_recycler_view"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:scrollbars="vertical" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:weightSum="1"
+                android:layout_weight="1">
 
-        </LinearLayout>
-    </ScrollView>
+                <TextView
+                    android:id="@+id/nodata"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/no_data"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    android:visibility="gone"
+                    android:textStyle="normal|bold"
+                    android:textAllCaps="true"
+                    android:textAlignment="center"
+                    android:layout_marginTop="40dp" />
+
+                <Spinner
+                    android:id="@+id/spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:spinnerMode="dialog" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/my_recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                </android.support.v7.widget.RecyclerView>
+
+            </LinearLayout>
+        </ScrollView>
+
+    </RelativeLayout>
 
 </LinearLayout>
 
-
 <android.support.v7.widget.RecyclerView
     android:id="@+id/RecyclerView"
-    android:layout_width="match_parent"
+    android:layout_width="320dp"
     android:layout_height="match_parent"
     android:layout_gravity="left"
     android:background="@color/colorWhite"
-    android:scrollbars="vertical"
-    tools:ignore="RtlHardcoded">
+    android:scrollbars="vertical">
 
 </android.support.v7.widget.RecyclerView>
-
-
 </android.support.v4.widget.DrawerLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
