--- a/app/src/main/res/layout-land/activity_class.xml
+++ b/app/src/main/res/layout-land/activity_class.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,16 +25,6 @@
             android:layout_width="match_parent">
         </include>
 
-        <TextView
-            android:id="@+id/nodata"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="no data available"
-            android:visibility="gone"
-            android:textColor="@android:color/black"
-            android:layout_gravity="center"
-            android:layout_weight="1" />
-
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -43,6 +34,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/noStData"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/no_data"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    android:visibility="gone"
+                    android:textStyle="normal|bold"
+                    android:textAllCaps="true"
+                    android:textAlignment="center"
+                    android:layout_marginTop="40dp" />
 
                 <android.support.v4.widget.SwipeRefreshLayout
                     android:id="@+id/swipe_refresh"
@@ -67,8 +73,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:background="#ffffff"
-        android:scrollbars="vertical">
+        android:background="@color/colorWhite"
+        android:scrollbars="vertical"
+        tools:ignore="RtlHardcoded">
 
     </android.support.v7.widget.RecyclerView>
 
