--- a/app/src/main/res/layout/activity_class.xml
+++ b/app/src/main/res/layout/activity_class.xml
@@ -36,9 +36,9 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/nodata"
+                    android:id="@+id/noStData"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="@string/no_data"
