--- a/app/src/main/res/layout-v21/daily_fill_catalog.xml
+++ b/app/src/main/res/layout-v21/daily_fill_catalog.xml
@@ -66,9 +66,9 @@
                     android:layout_weight="1">
 
                     <TextView
-                        android:id="@+id/nodata"
+                        android:id="@+id/noDailyTeachData"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:text="@string/no_data"
