--- a/app/src/main/res/layout-land/student_catalog.xml
+++ b/app/src/main/res/layout-land/student_catalog.xml
@@ -66,7 +66,7 @@
                     android:id="@+id/scrollLayout">
 
                     <TextView
-                        android:id="@+id/nodata"
+                        android:id="@+id/noSdData"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
