--- a/app/src/main/res/layout/off_class_activity.xml
+++ b/app/src/main/res/layout/off_class_activity.xml
@@ -66,9 +66,9 @@
                     android:layout_weight="1">
 
                     <TextView
-                        android:id="@+id/nodata"
+                        android:id="@+id/noOffData"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:text="@string/no_data"
@@ -77,8 +77,7 @@
                         android:visibility="gone"
                         android:textStyle="normal|bold"
                         android:textAllCaps="true"
-                        android:textAlignment="center"
-                        android:layout_marginTop="40dp" />
+                        android:textAlignment="center" />
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/my_recycler_view"
