--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -68,7 +68,7 @@ android:elevation="7dp">
                 <TextView
                     android:id="@+id/nodata"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:text="@string/no_data"
@@ -77,8 +77,7 @@ android:elevation="7dp">
                     android:visibility="gone"
                     android:textStyle="normal|bold"
                     android:textAllCaps="true"
-                    android:textAlignment="center"
-                    android:layout_marginTop="40dp" />
+                    android:textAlignment="center" />
 
                 <Spinner
                     android:id="@+id/spinner"
