--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -66,7 +66,7 @@ android:elevation="7dp">
                 android:layout_weight="1">
 
                 <TextView
-                    android:id="@+id/nodata"
+                    android:id="@+id/noTTData"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
