--- a/app/src/main/res/layout-v21/activity_class.xml
+++ b/app/src/main/res/layout-v21/activity_class.xml
@@ -26,7 +26,7 @@
         </include>
 
         <TextView
-        android:id="@+id/nodata"
+        android:id="@+id/noStData"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:text="@string/no_data"
