--- a/app/src/main/res/layout/activity_class.xml
+++ b/app/src/main/res/layout/activity_class.xml
@@ -36,7 +36,7 @@
                 android:orientation="vertical" >
 
                 <TextView
-                    android:id="@+id/nodata"
+                    android:id="@+id/noStData"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -53,12 +53,12 @@
                 <android.support.v4.widget.SwipeRefreshLayout
                     android:id="@+id/swipe_refresh"
                     android:layout_height="match_parent"
-                    android:layout_width="match_parent">
+                    android:layout_width="wrap_content">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/my_recycler_view"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content">
                     </android.support.v7.widget.RecyclerView>
                 </android.support.v4.widget.SwipeRefreshLayout>
 
