--- a/app/src/main/res/layout/off_class_activity.xml
+++ b/app/src/main/res/layout/off_class_activity.xml
@@ -37,7 +37,7 @@
             <Button
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:id="@+id/loadmore"
+                android:id="@+id/loadmore_offclasses"
                 android:background="@drawable/round_button"
                 android:layout_marginRight="10dp"
                 android:drawableTop="@drawable/down_arrow"
