--- a/app/src/main/res/layout/student_catalog.xml
+++ b/app/src/main/res/layout/student_catalog.xml
@@ -37,7 +37,8 @@
             <Button
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:id="@+id/loadmore"
+                android:clickable="true"
+                android:id="@+id/more_student"
                 android:background="@drawable/round_button"
                 android:layout_marginRight="10dp"
                 android:drawableTop="@drawable/down_arrow"
