--- a/app/src/main/res/layout/student_catalog_item.xml
+++ b/app/src/main/res/layout/student_catalog_item.xml
@@ -7,15 +7,6 @@
     android:orientation="vertical"
     android:tag="cards main container">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardBackgroundColor="#ffffff"
-        card_view:cardElevation="0dp">
-
-
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -66,8 +57,7 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:paddingRight="10dp"
                     android:textSize="14sp"
-                    android:layout_marginTop="2dp"
-                    android:textAlignment="textStart" />
+                    android:layout_marginTop="2dp" />
 
                 <TextView
                     android:text="Hostel"
@@ -97,13 +87,11 @@
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/textView3"
-            android:background="@drawable/divider"
-            android:textSize="24sp" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 
-    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
