--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -6,12 +6,6 @@
     android:orientation="vertical">
 
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
-
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
@@ -29,5 +23,13 @@
             android:layout_gravity="center"
             android:gravity="center_horizontal"
             android:src="@drawable/eracord"/>
-    </FrameLayout>
+        <TextView
+            android:id="@+id/era_load"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="Loading...."/>
 </LinearLayout>
