--- a/app/src/main/res/layout/off_class_activity.xml
+++ b/app/src/main/res/layout/off_class_activity.xml
@@ -46,9 +46,9 @@
                 android:layout_alignParentEnd="true"
                 android:minHeight="43dp"
                 android:elevation="1dp"
+                android:clickable="true"
                 android:layout_centerHorizontal="false"
                 android:paddingTop="6dp"
-                android:visibility="visible"
                 android:layout_marginBottom="10dp"
                 android:gravity="center_horizontal" />
 
