--- a/app/src/main/res/layout/timetable_row.xml
+++ b/app/src/main/res/layout/timetable_row.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="wrap_content"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="top"
+    android:gravity="center_vertical"
+    android:orientation="vertical"
     android:background="@drawable/divider">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingRight="10dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/subject"
-            android:layout_width="206dp"
+            android:layout_width="255dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="Name"
@@ -25,41 +28,49 @@
             android:fontFamily="sans-serif"
             android:textColor="@color/colorAccent"
             android:textStyle="bold"
-            android:textAllCaps="false"
-            android:layout_weight="0.64" />
+            android:textAllCaps="false" />
 
-        <TextView
-            android:id="@+id/start_time"
-            android:layout_width="wrap_content"
-            android:textColor="@color/bb_inActiveBottomBarItemColor"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="14sp"
-            android:layout_height="wrap_content"
-            android:text="9.00"
-            android:textAlignment="viewEnd"
-            android:paddingTop="6dp" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:text=" - "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/hyphen"
-            android:paddingTop="6dp" />
+            <TextView
+                android:id="@+id/start_time"
+                android:layout_width="wrap_content"
+                android:textColor="@android:color/holo_green_dark"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="14sp"
+                android:layout_height="wrap_content"
+                android:text="9.00"
+                android:paddingTop="6dp" />
 
-        <TextView
-            android:id="@+id/end_time"
-            android:layout_width="wrap_content"
-            android:textColor="@color/bb_inActiveBottomBarItemColor"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="14sp"
-            android:layout_height="wrap_content"
-            android:text="10.00"
-            android:paddingTop="6dp" />
+            <TextView
+                android:text=" - "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/hyphen"
+                android:paddingTop="6dp"
+                android:textColor="@android:color/holo_green_dark"
+                android:textAlignment="viewEnd" />
+
+            <TextView
+                android:id="@+id/end_time"
+                android:layout_width="wrap_content"
+                android:textColor="@android:color/holo_green_dark"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="14sp"
+                android:layout_height="wrap_content"
+                android:text="10.00"
+                android:paddingTop="6dp"
+                android:textAlignment="viewEnd" />
+        </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:orientation="horizontal" >
@@ -80,7 +91,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp">
